flx flash issue on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,9 +5,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: background-color 0.3s ease,
+/*   transition: background-color 0.3s ease,
     color 0.3s ease,
-    border-color 0.3s ease;
+    border-color 0.3s ease; */
+  -webkit-tap-highlight-color: transparent; //https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-tap-highlight-color
 }
 
 html,
@@ -31,6 +32,7 @@ $stroke-width-big: 8px;
 $stroke-width-big-bottom: 3.5px;
 $stroke-width-medium: 6px;
 $box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 4px, rgba(0, 0, 0, 0.25) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
 
 :root {
   --bg-color: #daae8c;
@@ -675,6 +677,8 @@ input {
   position: absolute;
   top: 9px;
 }
+
+
 
 /* .clock {
   position: fixed;
